# oceanpy-experiments

./: .gitignore  LICENSE  README.md  isolation_experiment.py  mace_explainer.py  make_isolation_table.py  meta_classifier.py  norms_experiment.py  parameters.py  plot_results.py  pyproject.toml  requirements.txt  run_experiment.py  setup.py  utils.py
datasets/: Adult.csv  Breast-Cancer-Wisconsin.csv  COMPAS.csv  CreditCard.csv  GermanCredit.csv  Phishing.csv  Seeds.csv  Spambase.csv  StudentsPerformance.csv
scripts/: run_experiment.py  utils.py
